# Genaudius-mcp

./: .gitignore  LICENSE  README.md  init_repo.sh  pyproject.toml
.github/workflows/: ci.yml
genaudius_mcp/: __init__.py  http_server.py  memory.py  server.py
openai_agents_example/: main.py
tests/: test_server.py
vps/: .env.example  README.md  docker-compose.yml  genaudius-mcp.env.example  saas_client.py
vps/docker/: Dockerfile.mcp  entrypoint.sh
vps/ecosystem/daw_bridge/: protocol_spec.md
vps/ecosystem/mixing_mastering/: mixing_recipes.json
vps/ecosystem/n8n/: dynamic_router_logic.js  harmony_cluster_prompts.md  harmony_rag_filter.js  maestro_agent_prompt.md  maestro_report_template.md  massive_ingestion_flow.json  percussion_cluster_flow.json  percussion_cluster_prompts.md  percussion_rag_filter.js  vocals_cluster_prompts.md  vocals_rag_filter.js
vps/ecosystem/scripts/: midi_reassembler.py
vps/ecosystem/supabase/: setup_supabase.sql
vps/nginx/: genaudius.app.conf  genaudius.cloud.conf
vps/scripts/: deploy.sh  renew_ssl.sh  setup_modal_domains.py  update.sh
